# IntellectSalina0

./: CMakeLists.txt  Find3rd.cmake  FindFfmpeg.cmake  FindLyCore.cmake  FindOSG.cmake  FindSDL2.cmake  FireProt.pro  LY_AgriVideoPlayer.rar  LY_AgriVideoPlayer333333.rar  README.md  巡检对接文档.md
FireProt/: CMakeLists.txt  DBHeartbeatThread.cpp  DBHeartbeatThread.h  FireProt.pro  HeaderWidget.cpp  HeaderWidget.h  IconToolButton.cpp  IconToolButton.h  Login.ui  MenuBar.cpp  MenuBar.h  MouseInfoWidget.cpp  MouseInfoWidget.h  Qt5_zh.ts  RBCornerWidget.cpp  RBCornerWidget.h  RBCornerWidget.ui  SingleApplication.cpp  SingleApplication.h  SplashScreen.cpp  SplashScreen.h  StyleTestWidget.cpp  StyleTestWidget.h  StyleTestWidget.ui  Toast.cpp  Toast.h  TreeChartWidget.cpp  TreeChartWidget.h  VMarksWidget.cpp  VMarksWidget.h  main.cpp  mainwindow.cpp  mainwindow.h  md5.cpp  md5.h  qrc.bat  qrc2.bat
LY_AgriMachineManager/: AgriMachine.cpp  AgriMachine.h  AgriMachineDailyProductReport.cpp  AgriMachineDailyProductReport.h  AgriMachineDailyProductReport.ui  AgriMachineDatabaseHandler.cpp  AgriMachineDatabaseHandler.h  AgriMachineDetails.cpp  AgriMachineDetails.h  AgriMachineDetails.ui  AgriMachineFaultMessage.cpp  AgriMachineFaultMessage.h  AgriMachineFaultMessage.ui  AgriMachineInfoTable.cpp  AgriMachineInfoTable.h  AgriMachineInfoTable.ui  AgriMachineManager.cpp  AgriMachineManager.h  AgriMachineManagerCurStatus.cpp  AgriMachineManagerCurStatus.h  AgriMachineManagerCurStatus.ui  AgriMachineManagerDecl.cpp  AgriMachineManagerDialog.cpp  AgriMachineManagerDialog.h  AgriMachineManagerDialog.ui  AgriMachineManagerTree.cpp  AgriMachineManagerTree.h  AgriMachineManagerTree.ui  AgriMachineManagerUtil.cpp  AgriMachineManagerUtil.h  AgriMachineMonthlyProductReport.cpp  AgriMachineMonthlyProductReport.h  AgriMachineMonthlyProductReport.ui  AgriMachineXMLCfgGenerater.cpp  AgriMachineXMLCfgGenerater.h  AgriPowerMachine.cpp  AgriPowerMachine.h  AgriWorkMachine.cpp  AgriWorkMachine.h  CMakeLists.txt  (+11 more)
LY_AgriMultispectralSensor/: AgriAPSimAnalysis.cpp  AgriAPSimAnalysis.ui  AgriAPSimControl.cpp  AgriAPSimControl.h  AgriAPSimControl.ui  AgriAPSimMet.cpp  AgriAPSimMet.ui  AgriDataAnalysisPredictDecl.cpp  AgriDataAnalysisPredictDecl.h  AgriDataAnalysisPredictDialog.cpp  AgriDataAnalysisPredictDialog.h  AgriDataAnalysisPredictDialog.ui  AgriFieldIdentifyCalculate.cpp  AgriFieldIdentifyCalculate.h  AgriFieldIdentifyCalculate.ui  AgriFieldIdentifyDialog.cpp  AgriFieldIdentifyDialog.h  AgriFieldIdentifyDialog.ui  AgriMultispectralAnalysis.cpp  AgriMultispectralAnalysis.h  AgriMultispectralAnalysis.ui  AgriMultispectralSensorController.cpp  AgriMultispectralSensorController.h  AgriMultispectralSensorDBHandler.cpp  AgriMultispectralSensorDBHandler.h  AgriMultispectralSensorDecl.cpp  AgriMultispectralSensorDecl.h  AgriMultispectralSensorUtil.cpp  AgriMultispectralSensorUtil.h  AgriMultispectralSensorWidget.cpp  AgriMultispectralSensorWidget.h  AgriMultispectralSensorWidget.ui  AgriSatelliteDataAnalysis.cpp  AgriSatelliteDataAnalysis.h  AgriSatelliteDataAnalysis.ui  AgriSatelliteDataDialog.cpp  AgriSatelliteDataDialog.h  AgriSatelliteDataDialog.ui  AgriSatelliteDataTable.cpp  AgriSatelliteDataTable.h  (+21 more)
LY_AgriRestfulManager/: AppComponent.h  CMakeLists.txt  IAgriRestfulManagerActivator.cpp  IAgriRestfulManagerActivator.h  LY_AgriRestfulManager.cpp  LY_AgriRestfulManager.h  LY_AgriRestfulManagerInterface.cpp  LY_AgriRestfulManagerInterface.h  LY_AgriRestfulManager_global.h
LY_AgricultureHomepageService/: AgriModelUtil.cpp  AgriModelUtil.h  CMakeLists.txt  IAgricultureHomepageImpl.cpp  IAgricultureHomepageImpl.h  LY_AgricultureHomepageService.cpp  LY_AgricultureHomepageService.h  LY_AgricultureHomepageServiceInterface.cpp  LY_AgricultureHomepageServiceInterface.h  LY_AgricultureHomepageService_global.h
LY_AgroTaskManage/: CDlgAgroManureParaShow.cpp  CDlgAgroManureParaShow.h  CDlgAgroManureParaShow.ui  CDlgAgroParameterShow.cpp  CDlgAgroParameterShow.h  CDlgAgroParameterShow.ui  CDlgAgroSampleParaShow.cpp  CDlgAgroSampleParaShow.h  CDlgAgroSampleParaShow.ui  CDlgAgroTaskManage.cpp  CDlgAgroTaskManage.h  CDlgAgroTaskManage.ui  CDlgAgroTaskManageEdit.cpp  CDlgAgroTaskManageEdit.h  CDlgAgroTaskManageEdit.ui  CDlgCropGrowStageWidget.cpp  CDlgCropGrowStageWidget.h  CDlgCropGrowStageWidget.ui  CDlgDebug.cpp  CDlgDebug.h  CDlgDebug.ui  CDlgScanParaShow.cpp  CDlgScanParaShow.h  CDlgScanParaShow.ui  CDlgTaskEventRecord.cpp  CDlgTaskEventRecord.h  CDlgTaskEventRecord.ui  CDlgTaskSchedule.cpp  CDlgTaskSchedule.h  CDlgTaskSchedule.ui  CDrawAxis.cpp  CDrawAxis.h  CMakeLists.txt  IAgroTaskManagerActivator.cpp  IAgroTaskManagerActivator.h  LY_AgroTaskManage.cpp  LY_AgroTaskManage.h  LY_AgroTaskManage.pro  LY_AgroTaskManageInterface.cpp  LY_AgroTaskManageInterface.h  (+3 more)
LY_CollaborativeSearchService/: AreaSearchAlgorithm.cpp  AreaSearchAlgorithm.h  CMakeLists.txt  Dijkstra.h  FloodFill.hpp  ICollaborativeSearchActivator.cpp  ICollaborativeSearchActivator.h  LY_CollaborativeSearchService.cpp  LY_CollaborativeSearchService.h  LY_CollaborativeSearchService.pro  LY_CollaborativeSearchServiceInterface.cpp  LY_CollaborativeSearchServiceInterface.h  LY_CollaborativeSearchService_global.h  LogRecord.cpp  LogRecord.h  MissionLoadDialog.cpp  MissionLoadDialog.h  MissionLoadDialog.ui  RRTStar.cpp  RRTStar.h  RoutePlaningReportsDialog.cpp  RoutePlaningReportsDialog.h  RoutePlaningReportsDialog.ui  RoutePlanningDialog.cpp  RoutePlanningDialog.h  RoutePlanningDialog.ui  RoutePlanningDisplayDialog.cpp  RoutePlanningDisplayDialog.h  RoutePlanningDisplayDialog.ui  SystemEventRecording.cpp  SystemEventRecording.h  UAVAreaChooseDialog.cpp  UAVAreaChooseDialog.h  UAVAreaChooseDialog.ui  UAVProtocol.cpp  UAVProtocol.h  aStar.cpp  aStar.h  gridbasesweepplanner.cpp  kmeans.cpp  (+8 more)
LY_PlatformStateMonitoring/: CMakeLists.txt  CommonStruct.h  IPlatformStateMonitoringActivator.cpp  IPlatformStateMonitoringActivator.h  LY_IPlatformStateMonitoring.cpp  LY_IPlatformStateMonitoring.h  LY_IPlatformStateMonitoringInterface.cpp  LY_IPlatformStateMonitoringInterface.h  (+23 more)
(+1721 files in other folders)
