cmake_minimum_required(VERSION 2.8)
project(FireProt)
file(GLOB_RECURSE lib_srcs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
file(GLOB_RECURSE lib_hdrs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)
file(GLOB_RECURSE lib_uis RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.ui)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
add_definitions(-DLY_USERMANAGESERVICE_LIBRARY)
include_directories(. OldCustom ../../include ${LYCORE_INCLUDE_DIR} ${LYCORE_INCLUDE_DIR}/lyUI ../../3rdParty/include)
list(APPEND lib_libs LY_TinyXml ${LYUI_LIBRARIES} ${LYCORES_LIBRARIES} ${OPENSCENEGRAPH_LIBRARIES} Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Sql Qt5::Xml Qt5::Network)
if(WIN32 AND NOT BUILD_WITH_CONSOLE)
  add_executable(${PROJECT_NAME} WIN32 ${lib_srcs} ${lib_hdrs} ${lib_uis})
  find_library(QTMAIN_LIBRARY_RELEASE qtmain)
  find_library(QTMAIN_LIBRARY_DEBUG qtmaind)
  if(QTMAIN_LIBRARY_DEBUG)
    set(QTMAIN_LIBRARIES optimized ${QTMAIN_LIBRARY_RELEASE} debug ${QTMAIN_LIBRARY_DEBUG})
  else()
    set(QTMAIN_LIBRARIES ${QTMAIN_LIBRARY_RELEASE})
  endif()
  list(APPEND lib_libs ${QTMAIN_LIBRARIES})
else()
  add_executable(${PROJECT_NAME} ${lib_srcs} ${lib_hdrs} ${lib_uis})
endif()
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "${PROJECT_NAME}$<$<CONFIG:Debug>:D>")
target_link_libraries(${PROJECT_NAME} ${lib_libs})
install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
