cmake_minimum_required(VERSION 2.8)
project(LY_AgriMachineManager)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
file(MAKE_DIRECTORY ../../include/${PROJECT_NAME})
file(GLOB_RECURSE lib_hdrs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ../../include/${PROJECT_NAME}/*.h)
file(GLOB_RECURSE lib_hdrs2 RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)
file(GLOB_RECURSE lib_srcs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
file(GLOB_RECURSE lib_qrcs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.qrc)
file(GLOB_RECURSE lib_uis RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.ui)
include_directories(. ../../include ../../include/3d ../../include/lyUI ../../3rdParty/include)
link_directories(../../../3rdParty/lib)
list(APPEND lib_libs Qt5::Core Qt5::Widgets Qt5::Network Qt5::Xml Qt5::Sql ${LYCORES_LIBRARIES})
list(APPEND lib_libs
  optimized rttr_core debug rttr_core_d
)
add_library(${PROJECT_NAME} SHARED ${lib_srcs} ${lib_hdrs} ${lib_hdrs2} ${lib_qrcs} ${lib_uis})
add_definitions(-DLY_AGRIMACHNIEMANAGER_LIBRARY)
target_link_libraries(${PROJECT_NAME} ${lib_libs})
install(DIRECTORY ../../include/${PROJECT_NAME} DESTINATION include)
if(WIN32)
  install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}-targets RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
else()
  install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}-targets LIBRARY DESTINATION bin ARCHIVE DESTINATION lib)
endif()
install(EXPORT ${PROJECT_NAME}-targets DESTINATION lib/cmake FILE ${PROJECT_NAME}-config.cmake)
