cmake_minimum_required(VERSION 2.8)
project(LY_AgriMultispectralSensor)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 11)
file(MAKE_DIRECTORY ../../include/${PROJECT_NAME})
file(GLOB_RECURSE lib_hdrs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)
file(GLOB_RECURSE lib_srcs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
file(GLOB_RECURSE lib_qrcs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.qrc)
file(GLOB_RECURSE lib_uis RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.ui)
#set(all_files ${lib_hdrs} ${lib_srcs})
#source_group_by_dir(all_files)
include_directories(. ../../include ../../include/3d ../../include/lyUI ../../3rdParty/include ../../3rdParty/include/Python37)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../lib/libcurl/lib ${CMAKE_CURRENT_SOURCE_DIR}/../../lib ../../../3rdParty/lib ../../../3rdParty/lib/Python37)
list(APPEND lib_libs LyUcisPluginFrameWork LY_TinyXml
  ${LYUI_LIBRARIES} ${LYCORES_LIBRARIES} Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Positioning Qt5::Network Qt5::Sql Qt5::PrintSupport Qt5::Xml  ${OPENSCENEGRAPH_LIBRARIES})
add_library(${PROJECT_NAME} SHARED ${lib_srcs} ${lib_hdrs} ${lib_qrcs} ${lib_uis})
add_definitions(-DLY_AGRIMULTISPECTRALSENSOR_LIBRARY)
target_link_libraries(${PROJECT_NAME} ${lib_libs} rttr_core python37 gdal_i)
install(DIRECTORY ../../include/${PROJECT_NAME} DESTINATION include)
if(WIN32)
  install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}-targets RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
else()
  install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}-targets LIBRARY DESTINATION bin ARCHIVE DESTINATION lib)
endif()
install(EXPORT ${PROJECT_NAME}-targets DESTINATION lib/cmake FILE ${PROJECT_NAME}-config.cmake)
