cmake_minimum_required(VERSION 2.8)
project(LY_AgricultureHomepageService)
file(GLOB_RECURSE lib_srcs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
file(GLOB_RECURSE lib_hdrs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)
file(GLOB_RECURSE lib_uis RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.ui)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
include_directories(. ../../include ../../include/lyUI ../../3rdParty/include)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../lib ../../../3rdParty/lib)
list(APPEND lib_libs LyUcisPluginFrameWork LY_TinyXml
  ${LYUI_LIBRARIES} ${LYCORES_LIBRARIES} Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Positioning Qt5::Network Qt5::Sql Qt5::PrintSupport  ${OPENSCENEGRAPH_LIBRARIES})
add_definitions(-DLY_AGRICULTUREHOMEPAGESERVICE_LIBRARY)
add_library(${PROJECT_NAME} SHARED ${lib_srcs} ${lib_hdrs} ${lib_uis})
target_link_libraries(${PROJECT_NAME} ${lib_libs})
install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}-targets RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
install(EXPORT ${PROJECT_NAME}-targets DESTINATION lib/cmake FILE ${PROJECT_NAME}-config.cmake)