cmake_minimum_required(VERSION 2.8)
project(LY_ProtocolParse_XygsServer)
file(GLOB_RECURSE lib_srcs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.c *.cc)
file(GLOB_RECURSE lib_hdrs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)
file(GLOB_RECURSE lib_uis RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.ui)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
include_directories(. ../../include SbgECom_Control/sbgECom/common)
if(WIN32)
  list(FILTER lib_srcs EXCLUDE REGEX ".*sbgInterfaceSerialUnix.c|.*ellipse.*.c|.*ekinoxMinimal.c")
else()
  list(FILTER lib_srcs EXCLUDE REGEX ".*sbgInterfaceSerialWin.c|.*ellipse.*.c|.*ekinoxMinimal.c")
endif()
list(APPEND lib_libs LyUcisPluginFrameWork
  ${LYUI_LIBRARIES} ${LYCORES_LIBRARIES} Qt5::Core Qt5::Network Qt5::Widgets Qt5::TextToSpeech Qt5::Positioning)
add_definitions(-DLY_PROTOCOLPARSE_XYGSSERVER_LIBRARY)
add_library(${PROJECT_NAME} SHARED ${lib_srcs} ${lib_hdrs} ${lib_uis})
target_link_libraries(${PROJECT_NAME} ${lib_libs})
install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}-targets RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
install(EXPORT ${PROJECT_NAME}-targets DESTINATION lib/cmake FILE ${PROJECT_NAME}-config.cmake)