cmake_minimum_required(VERSION 2.8)
project(LY_SensorVedioService)
file(GLOB_RECURSE lib_srcs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
file(GLOB_RECURSE lib_hdrs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)
file(GLOB_RECURSE lib_uis RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.ui)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
include_directories(. ../../include ../../include/lyUI ../../include/ffmpeg ../../include/lib_ly_ccip)

if(WIN32)
  link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../lib/ffmpeg)
  list(APPEND lib_libs dinput8 dxguid avcodec swscale avformat avutil)
endif()

list(APPEND lib_libs LyUcisPluginFrameWork  ${LYUI_LIBRARIES}  ${FFMPEG_LIBRARY} ${LYCORES_LIBRARIES} Qt5::Core Qt5::Widgets Qt5::Positioning Qt5::Sql Qt5::Network)
add_definitions(-DLY_SENSORVEDIOSERVICE_LIBRARY)
add_definitions(-DUNICODE)
if(UNIX)
  set(CMAKE_C_FLAGS -fpermissive)
  set(CMAKE_CXX_FLAGS -fpermissive)
endif()

add_library(${PROJECT_NAME} SHARED ${lib_srcs} ${lib_hdrs} ${lib_uis})
target_link_libraries(${PROJECT_NAME} ${lib_libs})
install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}-targets RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
install(EXPORT ${PROJECT_NAME}-targets DESTINATION lib/cmake FILE ${PROJECT_NAME}-config.cmake)