cmake_minimum_required(VERSION 2.8)
project(LY_TaskPlatMatch)
file(GLOB_RECURSE lib_srcs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
file(GLOB_RECURSE lib_hdrs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)
file(GLOB_RECURSE lib_uis RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.ui)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
include_directories(. ../../include ${LYCORE_INCLUDE_DIR} ${LYCORE_INCLUDE_DIR}/lyUI)
list(APPEND lib_libs LyUcisPluginFrameWork ${LYUI_LIBRARIES} ${LYCORES_LIBRARIES} Qt5::Core Qt5::Widgets)
add_definitions(-DLY_TASKPLATMATCH_LIBRARY)
add_library(${PROJECT_NAME} SHARED ${lib_srcs} ${lib_hdrs} ${lib_uis})
target_link_libraries(${PROJECT_NAME} ${lib_libs})
install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}-targets RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
install(EXPORT ${PROJECT_NAME}-targets DESTINATION lib/cmake FILE ${PROJECT_NAME}-config.cmake)