cmake_minimum_required(VERSION 2.8)
project(LY_UAVFlyControl_Mavlink)
file(GLOB_RECURSE lib_srcs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
file(GLOB_RECURSE lib_hdrs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)
file(GLOB_RECURSE lib_uis RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.ui)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 11)
set(excludeReg "groundcontrol/.*")
list(FILTER lib_srcs EXCLUDE REGEX ${excludeReg})
list(FILTER lib_hdrs EXCLUDE REGEX ${excludeReg})
include_directories(. ../../include ../../include/lyUI ../../include/3d VehicleManage)
include("groundcontrol/CMakeLists.txt")
list(APPEND lib_libs LyUcisPluginFrameWork LY_TinyXml ${LYUI_LIBRARIES} ${LYCORES_LIBRARIES} Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Sql Qt5::Xml Qt5::Network Qt5::Charts Qt5::Positioning Qt5::AxContainer Qt5::TextToSpeech)
if(WIN32)
  list(APPEND lib_libs dinput8 dxguid)
endif()
add_definitions(-DLY_UAVFLYCONTROL_MAVLINK_LIBRARY)
add_library(${PROJECT_NAME} SHARED ${lib_srcs} ${lib_hdrs} ${lib_uis} ${gc_srcs} ${gc_hdrs} ${gc_qrcs})
target_link_libraries(${PROJECT_NAME} ${lib_libs})
install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}-targets RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
install(EXPORT ${PROJECT_NAME}-targets DESTINATION lib/cmake FILE ${PROJECT_NAME}-config.cmake)