cmake_minimum_required(VERSION 2.8)
project(LY_UAVNavigationArmShotAlone54)
file(GLOB_RECURSE lib_srcs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
file(GLOB_RECURSE lib_hdrs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)
file(GLOB_RECURSE lib_uis RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.ui)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

include_directories(. ../../include ../../include/lyUI ../../include/ffmpeg ../../include/lib_ly_ccip ../../3rdParty/include ${CMAKE_CURRENT_BINARY_DIR})
if(WIN32)
  link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../lib/HCNetSDKCom ${CMAKE_CURRENT_SOURCE_DIR}/../../lib/ffmpeg)
  list(APPEND lib_libs optimized lib_ly_ccip debug lib_ly_ccipD)
endif()
list(APPEND lib_libs LyUcisPluginFrameWork LY_TinyXml ${FFMPEG_LIBRARY} ${SDL2_LIBRARY} ${LYUI_LIBRARIES} ${LYCORES_LIBRARIES} Qt5::Core Qt5::Widgets Qt5::Network Qt5::Sql Qt5::Concurrent Qt5::Positioning Qt5::RemoteObjects)
add_definitions(-DLY_UAVNAVIGATIONARMSHOTALONE54_LIBRARY)
add_definitions(-DPLAY_VIDEO_STREAM_MANAGE_DEFINES)
add_definitions(-DPLAY_YOLO_VIDEO_STREAM_MANAGE_DEFINES)
add_definitions(-DPLAY_VIDEO_STREAM_MANAGE_PLAY_VIDEO_MANAGE_54_DEFINES)
add_definitions(-DUNICODE)
if(UNIX)
  set(CMAKE_C_FLAGS -fpermissive)
  set(CMAKE_CXX_FLAGS -fpermissive)
endif()
qt5_generate_repc(lib_srcs ${CMAKE_CURRENT_SOURCE_DIR}/PlayVideoManage/YoloVideoStreamManageCommonInterface.rep SOURCE)
add_library(${PROJECT_NAME} SHARED ${lib_srcs} ${lib_hdrs} ${lib_uis} UAVNavigationArmShotAlone54.qrc)
target_link_libraries(${PROJECT_NAME} ${lib_libs})
install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}-targets RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
install(EXPORT ${PROJECT_NAME}-targets DESTINATION lib/cmake FILE ${PROJECT_NAME}-config.cmake)
